# routes/index.js
@@ -11,5 +11,6 @@ router.use("/auth", require("./authRoutes"));
 router.use("/products", require("./productRoutes"));
 router.use("/users", require("./userRoutes"));
 router.use("/cart", require("./cartRoutes"));
+router.use("/orders", require("./orderRoutes"));
 
 module.exports = router;
